name:                mapview-cli
version:             1
synopsis:            CLI Frontend for Mapview 3+
homepage:            https://mapview.noexc.org/
license:             MIT
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2015 Ricky Elrod
category:            KD8ZRC
build-type:          Simple
cabal-version:       >=1.10

executable mapview-cli
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >= 4 && < 5
                     , text >= 1 && < 2
                     , vty >= 5 && < 6
                     , brick >= 0.2 && < 1
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -threaded -O2
